; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/psp/extr_psp_osal.c_pte_osThreadDelete.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/psp/extr_psp_osal.c_pte_osThreadDelete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@PTE_OS_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pte_osThreadDelete(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i8* @getTlsStructFromThread(i32 %5)
  store i8* %6, i8** %3, align 8
  %7 = load i32, i32* %2, align 4
  %8 = call %struct.TYPE_4__* @getThreadData(i32 %7)
  store %struct.TYPE_4__* %8, %struct.TYPE_4__** %4, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @sceKernelDeleteSema(i32 %11)
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %14 = call i32 @free(%struct.TYPE_4__* %13)
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @pteTlsThreadDestroy(i8* %15)
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @sceKernelDeleteThread(i32 %17)
  %19 = load i32, i32* @PTE_OS_OK, align 4
  ret i32 %19
}

declare dso_local i8* @getTlsStructFromThread(i32) #1

declare dso_local %struct.TYPE_4__* @getThreadData(i32) #1

declare dso_local i32 @sceKernelDeleteSema(i32) #1

declare dso_local i32 @free(%struct.TYPE_4__*) #1

declare dso_local i32 @pteTlsThreadDestroy(i8*) #1

declare dso_local i32 @sceKernelDeleteThread(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
